--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
             {% else %}
                 {% assign current = null %}
             {% endif %}
-      <li class="ampstart-nav-item ampstart-nav-dropdown relative " {{ current }}>
+      <li class="ampstart-nav-item ampstart-nav-dropdown relative {{ entry.title }}" {{ current }}>
           <li class="ampstart-faq-item"><a href="{{ site.url }}{{ site.baseurl }}{{ entry.url }}" class="text-decoration-none">{{ entry.title }}</a></li>
       </li>
       {% endfor %}
