--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,17 +5,17 @@
             {% if site.about %}
 
             <li class="px1">
-                <a class="text-decoration-none ampstart-label" href="{{site.baseurl}}{{site.about}}">About</a>
+                <a class="text-decoration-none ampstart-label" href="{{site.url}}/{{site.about}}">About</a>
             </li>
             {% endif %} {% if site.contact %}
 
             <li class="px1">
-                <a class="text-decoration-none ampstart-label" href="{{site.baseurl}}{{site.contact}}">Contact</a>
+                <a class="text-decoration-none ampstart-label" href="{{site.url}}/{{site.contact}}">Contact</a>
             </li>
             {% endif %} {% if site.privacy-policy %}
 
             <li class="px1">
-                <a class="text-decoration-none ampstart-label" href="{{site.baseurl}}{{site.privacy-policy}}">Privacy Policy</a>
+                <a class="text-decoration-none ampstart-label" href="{{site.url}}/{{site.privacy-policy}}">Privacy Policy</a>
             </li>
             {% endif %}
 
