--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger  pr2  ">☰
     </div>
     {% if site.logo %}
-    <a href="{{site.baseurl}}" title="{{site.title}}">
+    <a href="{{site.url}}" title="{{site.title}}">
       <amp-img src="{{site.url}}/{{site.logo}}" width="110" height="33" layout="fixed" class="my0 mx-auto" alt="{{ site.title }}"></amp-img>
     </a>
     {% endif %}
