added some stuff

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,13 +44,9 @@ layout: default
 
       </div>
 
-      <div class="mb4 px3 radhakrishna" align="left">
-		    <amp-social-share type="facebook" width="45" height="33" data-param-app_id="145393166088568"></amp-social-share>
-		    <amp-social-share type="twitter" width="45" height="33"></amp-social-share>
-		    <amp-social-share type="whatsapp" width="45" height="33"></amp-social-share>
-		    <amp-social-share type="gplus" width="45" height="33"></amp-social-share>
-		    <amp-social-share width="45" height="33" type="email"></amp-social-share>
-	    </div>
+      <div class="mb4 px3" align="left">
+        {% include social-share.html %}
+      </div>
 
   {% else %}
 
@@ -140,10 +136,7 @@ layout: default
 
 <!-- Start Socialbox -->
 <div class="ampstart-social-box mb4">
-  <amp-social-share type="twitter" aria-label="Share this on Twitter"></amp-social-share>
-  <amp-social-share type="facebook" aria-label="Share this on Facebook" data-param-app_id="145393166088568"></amp-social-share>
-  <amp-social-share type="gplus" aria-label="Share this on Google Plus"></amp-social-share>
-  <amp-social-share type="email" aria-label="Share this with E-mail"></amp-social-share>
+  {% include social-share.html %}
 </div>
 <!-- End Socialbox -->
 
