--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,7 +47,7 @@
 
   <style amp-custom>
   {% capture include_to_scssify %}
-    {% include styles.scss %}
+    {% include css/styles.scss %}
   {% endcapture %}
   {{ include_to_scssify | scssify | replace: "@charset "UTF-8";", "" }}
   </style>
