--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,9 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="{% if title %}{{ title }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
   <meta property="og:description" content="{% if excerpt %}{{ excerpt }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
-  <meta property="og:url" content="{{ site.url }}{% if site.baseurl %}{{ site.baseurl }}{% endif %}{{ page.url | remove: '/' }}" />
-  <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}" />
+  <meta property="og:url" content="{{ site.url }}{% if site.url %}/{{ site.url }}{% endif %}{{ page.url | remove: '/' }}" />
+  <meta property="og:image" content="{{ site.url }}/{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}" />
+  <meta property="fb:app_id" content="{{ site.fb_app_id }}" />
   <meta property="article:publisher" content="https://www.facebook.com/{{ site.facebook }}" />{% if excerpt %}
   <meta property="article:author" content="https://www.facebook.com/{{ site.facebook }}" />
   <meta property="article:published_time" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% elsif post.date %}{{ post.date | date_to_xmlschema }}{% endif %}" />
@@ -25,8 +26,8 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="{% if title %}{{ title }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
   <meta name="twitter:description" content="{% if excerpt %}{{ excerpt }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
-  <meta name="twitter:url" content="{{ site.url }}{{ site.baseurl }}" />
-  <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}" />
+  <meta name="twitter:url" content="{{ site.url }}{{ site.url }}" />
+  <meta name="twitter:image" content="{{ site.url }}{{ site.url }}{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}" />
   <meta name="twitter:label1" content="Written by" />
   <meta name="twitter:data1" content="{{ site.title }}" />{% if page.tags.size > 0 %}
   <meta name="twitter:label2" content="Filed under" />
@@ -38,8 +39,8 @@
   <meta property="og:image:width" content="2000" />
   <meta property="og:image:height" content="666" />{% endif %}
 
-  <link rel="canonical" href="{{ site.url }}{% if site.baseurl %}{{ site.baseurl }}{% endif %}{{ page.url | remove: '/' }}" />
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ site.url }}{% if site.url %}{{ site.url }}{% endif %}{{ page.url | remove: '/' }}" />
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "feed.xml" | prepend: site.url | prepend: site.url }}">
 
   <script type="application/ld+json">
   {% include metadata.json %}
