--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,19 +14,21 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="{% if title %}{{ title }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
   <meta property="og:description" content="{% if excerpt %}{{ excerpt }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
-  <meta property="og:url" content="{{site.url}}/{% if page.url %}{{ page.url }}{% endif %}" />
+  <meta property="og:url" content="{{site.url}}{% if page.url %}{{ page.url }}{% endif %}" />
   <meta property="og:image" content="{{ site.url }}/{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}" />
   <meta property="fb:app_id" content="{{ site.fb_app_id }}" />
-  <meta property="article:publisher" content="https://www.facebook.com/{{ site.facebook }}" />{% if excerpt %}
+  <meta property="article:publisher" content="https://www.facebook.com/{{ site.facebook }}" />
+  {% if excerpt %}
   <meta property="article:author" content="https://www.facebook.com/{{ site.facebook }}" />
   <meta property="article:published_time" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% elsif post.date %}{{ post.date | date_to_xmlschema }}{% endif %}" />
   <meta property="article:modified_time" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% elsif post.date %}{{ post.date | date_to_xmlschema }}{% endif %}" />{% endif %}{% if page.tags.size > 0 %}
-  <meta property="article:tag" content="{{ page.tags | first | capitalizeall }}" />{% endif %}
+  <meta property="article:tag" content="{{ page.tags | first | capitalizeall }}" />
+  {% endif %}
   <meta name="robots" content="{{ site.robots }}"/>
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="{% if title %}{{ title }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
   <meta name="twitter:description" content="{% if excerpt %}{{ excerpt }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
-  <meta name="twitter:url" content="{{ page.url }}" />
+  <meta name="twitter:url" content="{{site.url}}{% if page.url %}{{ page.url }}{% endif %}" />
   <meta name="twitter:image" content="{{ site.url }}{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}" />
   <meta name="twitter:label1" content="Written by" />
   <meta name="twitter:data1" content="{{ site.title }}" />{% if page.tags.size > 0 %}
