--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,13 @@
 ---
 layout: default
 ---
+{% if page.cover %}
+<figure class="ampstart-image-fullpage-hero m0 relative mb4">
+  <amp-img width="404" height="720" alt="{{ page.title }}" layout="responsive" src="{{ site.baseurl }}{{ page.cover }}" media="(max-width: 415px)"></amp-img>
+  <amp-img height="720" alt="{{ page.title }}" layout="fixed-height" src="{{ site.baseurl }}{{ page.cover }}" media="(min-width: 416px)"></amp-img>
+</figure>
+{% endif %}
+
 <main class="content" role="main">
   <article class="post">
     <div class="post-meta">
