--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,8 +3,20 @@ layout: default
 ---
 {% if page.cover %}
 <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-  <amp-img width="404" height="720" alt="{{ page.title }}" layout="responsive" src="{{ site.baseurl }}{{ page.cover }}" media="(max-width: 415px)"></amp-img>
-  <amp-img height="720" alt="{{ page.title }}" layout="fixed-height" src="{{ site.baseurl }}{{ page.cover }}" media="(min-width: 416px)"></amp-img>
+  <amp-img width="404" height="720" alt="{{ page.title }}" layout="responsive" src="{{ site.url }}/{{ page.cover }}" media="(max-width: 415px)"></amp-img>
+  <amp-img height="720" alt="{{ page.title }}" layout="fixed-height" src="{{ site.url }}/{{ page.cover }}" media="(min-width: 416px)"></amp-img>
+  <figcaption class="absolute top-0 right-0 bottom-0 left-0">
+    <header class="p3">
+      <h1 class="ampstart-fullpage-hero-heading mb0 raybogman">
+        <span class="ampstart-fullpage-hero-heading-text title">
+          {{ page.title }}
+        </span>
+      </h1>
+    </header>
+    <footer class="absolute left-0 right-0 bottom-0">
+      <a class="ampstart-readmore py3 caps line-height-2 text-decoration-none center block h5" href="#content"><span class="ampstart-readmore-text px1">Read more</span></a>
+    </footer>
+  </figcaption>
 </figure>
 {% endif %}
 
