--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: default
 ---
   {% if page.cover %}
   <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-    <amp-img width="404" height="720" alt="{{ page.title }}" layout="responsive" src="{{ site.baseurl }}{{ page.cover }}" media="(max-width: 415px)"></amp-img>
-    <amp-img height="720" alt="{{ page.title }}" layout="fixed-height" src="{{ site.baseurl }}{{ page.cover }}" media="(min-width: 416px)"></amp-img>
+    <amp-img width="404" height="720" alt="{{ page.title }}" layout="responsive" src="{{ site.url }}/{{ page.cover }}" media="(max-width: 415px)"></amp-img>
+    <amp-img height="720" alt="{{ page.title }}" layout="fixed-height" src="{{ site.url }}/{{ page.cover }}" media="(min-width: 416px)"></amp-img>
     <figcaption class="absolute top-0 right-0 bottom-0 left-0">
       <header class="p3">
         <h1 class="ampstart-fullpage-hero-heading mb0 raybogman">
