--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,7 +20,7 @@ layout: default
 </figure>
 {% endif %}
 
-<main class="content" role="main">
+<main id="content" role="main" class="">
   <article class="post">
     <div class="post-meta">
       <h1 class="post-title">{{ page.title }}</h1>
