add trainer page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,7 +27,9 @@ layout: default
     </div>
     <section class="post-content">
       <a name="topofpage"></a>
-      {{content}}
+      <div class="px3 mb4">
+        {{content}}
+      </div>
     </section>
   </article>
 </main>
