--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -1,4 +1,4 @@
-### Customer reviews
+### Recommendations
 
 {% for entry in site.data.review | sort: 'position' %}
 {% if entry.status == 'active' %}
@@ -12,3 +12,5 @@
 <br>
 {% endif %}
 {% endfor %}
+
+More reviews can be found on my <a target="_blank" title="Recommendations - Ray Bogman" href="https://www.linkedin.com/in/raybogman/">Linkedin</a> page.
