--- a/_includes/css/styles.scss
+++ b/_includes/css/styles.scss
@@ -339,7 +339,7 @@ body {
       margin: 30px auto;
       border: 0px solid #dddddd;
       border-top: medium double #dddddd;
-      :after {
+      hr:after {
         content: "§";
         display: inline-block;
         position: relative;
