--- a/_includes/css/styles.scss
+++ b/_includes/css/styles.scss
@@ -386,6 +386,7 @@ body {
       margin: 16px 0 16px 100px;
       border: 0px solid #dddddd;
       border-top: 1px solid #dddddd;
+      text-align: center;
     }
     .isLeft {
       float: left;
