--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,7 +41,7 @@
   <meta property="og:image:width" content="2000" />
   <meta property="og:image:height" content="666" />{% endif %}
 
-  <link rel="canonical" href="{% if site.url %}{{ site.url }}{% endif %}/{{ page.url }}" />
+  <link rel="canonical" href="{{ site.url }}/{% if site.url %}{{ site.url }}{% endif %}{{ page.url | remove: '/' }}" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url}}/feed.xml">
 
   <script type="application/ld+json">
