--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,9 +44,8 @@
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}"/>
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url}}/feed.xml">
 
-  <script type="application/ld+json">
-  {% include metadata.json %}
-  </script>
+  <script type="application/ld+json">{% include metadata.json %}</script>
+  <script type="application/ld+json">{% include breadcrumb.json %}</script>
 
   <style amp-custom>
   {% capture include_to_scssify %}
@@ -54,8 +53,6 @@
   {% endcapture %}
   {{ include_to_scssify | scssify | replace: "@charset "UTF-8";", "" }}
   </style>
-
-
 
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
