--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,6 +41,7 @@
   <meta property="og:image:width" content="2000" />
   <meta property="og:image:height" content="666" />{% endif %}
 
+  <link rel="alternate" href="{{ site.url }}{{ page.url | replace:'index.html','' }}" hreflang="x-default" />
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}"/>
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url}}/feed.xml">
 
