update manifest + title to social link

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,32 +1,32 @@
 <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
   {% if site.linkedin %}
   <li>
-    <a target="_blank" href="https://www.linkedin.com/in/{{site.linkedin}}"><i class="fa fa-linkedin-square fa-1x"></i></a>
+    <a target="_blank" title="Linkedin {{site-title}}" href="https://www.linkedin.com/in/{{site.linkedin}}"><i class="fa fa-linkedin-square fa-1x"></i></a>
   </li>
   {% endif %}
   {% if site.twitter %}
   <li>
-    <a target="_blank" href="https://twitter.com/{{site.twitter}}"><i class="fa fa-twitter-square fa-1x"></i></a>
+    <a target="_blank" title="Twitter {{site-title}}" href="https://twitter.com/{{site.twitter}}"><i class="fa fa-twitter-square fa-1x"></i></a>
   </li>
   {% endif %}
   {% if site.facebook %}
   <li>
-    <a target="_blank" href="https://facebook.com/{{site.facebook}}"><i class="fa fa-facebook-square fa-1x"></i></a>
+    <a target="_blank" title="Facebook {{site-title}}" href="https://facebook.com/{{site.facebook}}"><i class="fa fa-facebook-square fa-1x"></i></a>
   </li>
   {% endif %}
   {% if site.instagram %}
   <li>
-    <a target="_blank" href="https://instagram.com/{{site.instagram}}"><i class="fa fa-instagram fa-1x"></i></a>
+    <a target="_blank" title="instagram {{site-title}}" href="https://instagram.com/{{site.instagram}}"><i class="fa fa-instagram fa-1x"></i></a>
   </li>
   {% endif %}
   {% if site.github %}
   <li>
-    <a target="_blank" href="https://github.com/{{site.github}}"><i class="fa fa-github-square fa-1x"></i></a>
+    <a target="_blank" title="Github {{site-title}}" href="https://github.com/{{site.github}}"><i class="fa fa-github-square fa-1x"></i></a>
   </li>
   {% endif %}
   {% if site.prezi %}
   <li>
-    <a target="_blank" href="https://prezi.com/user/{{site.prezi}}"><i class="fa fa-file-powerpoint-o fa-1x"></i></a>
+    <a target="_blank" title="Prezi {{site-title}}" href="https://prezi.com/user/{{site.prezi}}"><i class="fa fa-file-powerpoint-o fa-1x"></i></a>
   </li>
   {% endif %}
 </ul>
