--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,3 +33,5 @@
       <a href="{{site.baseurl}}">{{site.domain}}</a> &nbsp; | &nbsp;  All Rights Reserved.
     </small>
 </footer>
+
+<amp-install-serviceworker src="{{site.url}}/sw.js" layout="nodisplay"> </amp-install-serviceworker>
