update css + manifest

--- a/_includes/css/styles.scss
+++ b/_includes/css/styles.scss
@@ -159,11 +159,11 @@ body {
     }
     .post-meta {
       font-size: 14px;
-      color: #b3b3b1;
+      color: #666665;
       line-height: 30px;
       margin-top: 20px;
       a {
-        color: #b3b3b1;
+        color: #666665;
         text-decoration: none;
         &:hover {
           text-decoration: underline;
@@ -182,7 +182,7 @@ body {
   margin: 0;
   padding: 16px 0;
   span {
-    color: #b3b3b1;
+    color: #666665;
     font-size: $rs / 8 * 5;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -250,7 +250,7 @@ body {
     text-indent: -9999px;
   }
   .post-meta-text {
-    color: #b3b3b1;
+    color: #666665;
     letter-spacing: -0.02em;
     font-weight: 400;
     font-style: normal;
