--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,7 +23,7 @@ layout: default
 <main id="content" role="main" class="">
   <article class="post">
     <div class="post-meta">
-      <h1 class="post-title">{{ page.title }}</h1>
+      <h1 class="post-title">{{ page.intro }}</h1>
     </div>
     <section class="post-content">
       <a name="topofpage"></a>
