--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="description" content="{% if page.description | truncate: 320 %}{% else %}{{ site.description | truncate: 320 }}{% endif %}">
   <meta name="theme-color" content="#f46f25">
   <meta property="og:site_name" content="{{ site.title }}" />
   <meta property="og:type" content="website" />
