--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@ layout: default
     <header class="p3">
       <h1 class="ampstart-fullpage-hero-heading mb0 raybogman">
         <span class="ampstart-fullpage-hero-heading-text title">
-          {{ page.title }}
+          {{ page.intro }}
         </span>
       </h1>
     </header>
