add clossing tag article - was missing

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -139,7 +139,7 @@ layout: default
   {% include social-share.html %}
 </div>
 <!-- End Socialbox -->
-
+</article>
 </main>
 
 {% include footer.html %}
