--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,4 +32,5 @@
   		&copy; {{ site.time | date: '%Y' }}, last updated {{ site.time | date: "%H:%M %d %B %Y"  }}
       <a href="{{site.baseurl}}">{{site.domain}}</a> &nbsp; | &nbsp;  All Rights Reserved.
     </small>
+    {% include cert.html %}
 </footer>
