--- a/_includes/cert.html
+++ b/_includes/cert.html
@@ -1,17 +1,23 @@
 <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
   {% if site.M2CPCD %}
   <li>
-    <a target="_blank" rel="noopener" title="Magento Professional Cloud Developer (M2CPCD)" href="https://www.linkedin.com/in/{{site.linkedin}}"></a>
+    <a target="_blank" rel="noopener" title="Magento Professional Cloud Developer (M2CPCD)" href="https://u.magento.com/certification/directory/dev/42440/">
+       <amp-img src="{{ site.url }}/{{ site.M2CPCD }}" width="32" height="58" layout="responsive" alt="Magento Professional Cloud Developer (M2CPCD)"></amp-img>
+    </a>
   </li>
   {% endif %}
   {% if site.M2SSC %}
   <li>
-    <a target="_blank" rel="noopener" title="Magento 2 Solutions Specialist (M2SSC)" href="https://twitter.com/{{site.twitter}}"></a>
+    <a target="_blank" rel="noopener" title="Magento 2 Solutions Specialist (M2SSC)" href="https://u.magento.com/certification/directory/dev/42440/">
+       <amp-img src="{{ site.url }}/{{ site.M2SSC }}" width="32" height="58" layout="responsive" alt="Magento 2 Solutions Specialist (M2SSC)"></amp-img>
+    </a>
   </li>
   {% endif %}
   {% if site.MCSS %}
   <li>
-    <a target="_blank" rel="noopener" title="Magento Certified Solution Specialist (MCSS)" href="https://facebook.com/{{site.facebook}}"></a>
+    <a target="_blank" rel="noopener" title="Magento Certified Solution Specialist (MCSS)" href="https://u.magento.com/certification/directory/dev/42440/">
+           <amp-img src="{{ site.url }}/{{ site.MCSS }}" width="32" height="58" layout="responsive" alt="Magento Certified Solution Specialist (MCSS)"></amp-img>
+    </a>
   </li>
   {% endif %}
 </ul>
