update cert page

--- a/_includes/cert.html
+++ b/_includes/cert.html
@@ -1,8 +1,8 @@
-<ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
-  {% if site.M2CPCD %}
+<ul>
+  {% if site.m2cpcd %}
   <li>
     <a target="_blank" rel="noopener" title="Magento Professional Cloud Developer (M2CPCD)" href="https://u.magento.com/certification/directory/dev/42440/">
-       <amp-img src="{{ site.url }}/{{ site.M2CPCD }}" width="32" height="58" layout="responsive" alt="Magento Professional Cloud Developer (M2CPCD)"></amp-img>
+       <amp-img src="{{ site.url }}/{{ site.m2cpcd }}" width="32" height="58" layout="responsive" alt="Magento Professional Cloud Developer (M2CPCD)"></amp-img>
     </a>
   </li>
   {% endif %}
