--- a/_includes/cert.html
+++ b/_includes/cert.html
@@ -1,4 +1,4 @@
-<ul>
+<ul class="list-reset flex flex-wrap mb3">
   {% if site.m2cpcd %}
   <li>
     <a target="_blank" rel="noopener" title="Magento Professional Cloud Developer (M2CPCD)" href="https://u.magento.com/certification/directory/dev/42440/">
@@ -6,17 +6,17 @@
     </a>
   </li>
   {% endif %}
-  {% if site.M2SSC %}
+  {% if site.m2ccs %}
   <li>
     <a target="_blank" rel="noopener" title="Magento 2 Solutions Specialist (M2SSC)" href="https://u.magento.com/certification/directory/dev/42440/">
-       <amp-img src="{{ site.url }}/{{ site.M2SSC }}" width="32" height="58" layout="responsive" alt="Magento 2 Solutions Specialist (M2SSC)"></amp-img>
+       <amp-img src="{{ site.url }}/{{ site.m2ccs }}" width="32" height="58" layout="responsive" alt="Magento 2 Solutions Specialist (M2SSC)"></amp-img>
     </a>
   </li>
   {% endif %}
-  {% if site.MCSS %}
+  {% if site.mccs %}
   <li>
     <a target="_blank" rel="noopener" title="Magento Certified Solution Specialist (MCSS)" href="https://u.magento.com/certification/directory/dev/42440/">
-           <amp-img src="{{ site.url }}/{{ site.MCSS }}" width="32" height="58" layout="responsive" alt="Magento Certified Solution Specialist (MCSS)"></amp-img>
+           <amp-img src="{{ site.url }}/{{ site.mccs }}" width="32" height="58" layout="responsive" alt="Magento Certified Solution Specialist (MCSS)"></amp-img>
     </a>
   </li>
   {% endif %}
