--- a/_includes/cert.html
+++ b/_includes/cert.html
@@ -1,4 +1,4 @@
-<ul class="list-reset flex flex-wrap mb3">
+<ul class="">
   {% if site.m2cpcd %}
   <li>
     <a target="_blank" rel="noopener" title="Magento Professional Cloud Developer (M2CPCD)" href="https://u.magento.com/certification/directory/dev/42440/">
@@ -13,10 +13,10 @@
     </a>
   </li>
   {% endif %}
-  {% if site.mccs %}
+  {% if site.mcss %}
   <li>
     <a target="_blank" rel="noopener" title="Magento Certified Solution Specialist (MCSS)" href="https://u.magento.com/certification/directory/dev/42440/">
-           <amp-img src="{{ site.url }}/{{ site.mccs }}" width="32" height="58" layout="responsive" alt="Magento Certified Solution Specialist (MCSS)"></amp-img>
+           <amp-img src="{{ site.url }}/{{ site.mcss }}" width="32" height="58" layout="responsive" alt="Magento Certified Solution Specialist (MCSS)"></amp-img>
     </a>
   </li>
   {% endif %}
