some changes in class cert

--- a/_includes/cert.html
+++ b/_includes/cert.html
@@ -1,4 +1,4 @@
-<ul class="ampstart-headerbar flex flex-column items-center px3">
+<ul class="ampstart-social-follow flex justify-around items-center flex-wrap m0 mb4">
   {% if site.m2cpcd %}
   <li>
     <a target="_blank" rel="noopener" title="Magento Professional Cloud Developer (M2CPCD)" href="https://u.magento.com/certification/directory/dev/42440/">
