--- a/_includes/cert.html
+++ b/_includes/cert.html
@@ -1,20 +1,20 @@
-<ul class="ampstart-social-follow flex justify-around items-center flex-wrap m0 mb4">
+<ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
   {% if site.m2cpcd %}
-  <li>
+  <li class="cert">
     <a target="_blank" rel="noopener" title="Magento Professional Cloud Developer (M2CPCD)" href="https://u.magento.com/certification/directory/dev/42440/">
        <amp-img src="{{ site.url }}/{{ site.m2cpcd }}" width="32" height="58" layout="responsive" alt="Magento Professional Cloud Developer (M2CPCD)"></amp-img>
     </a>
   </li>
   {% endif %}
   {% if site.m2ccs %}
-  <li>
+  <li class="cert">
     <a target="_blank" rel="noopener" title="Magento 2 Solutions Specialist (M2SSC)" href="https://u.magento.com/certification/directory/dev/42440/">
        <amp-img src="{{ site.url }}/{{ site.m2ccs }}" width="32" height="58" layout="responsive" alt="Magento 2 Solutions Specialist (M2SSC)"></amp-img>
     </a>
   </li>
   {% endif %}
   {% if site.mcss %}
-  <li>
+  <li class="cert">
     <a target="_blank" rel="noopener" title="Magento Certified Solution Specialist (MCSS)" href="https://u.magento.com/certification/directory/dev/42440/">
            <amp-img src="{{ site.url }}/{{ site.mcss }}" width="32" height="58" layout="responsive" alt="Magento Certified Solution Specialist (MCSS)"></amp-img>
     </a>
