update metadata on article (amp index page error)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,8 +45,9 @@
   <link rel="alternate" href="{{ site.url }}{{ page.url | replace:'index.html','' }}" hreflang="x-default" />
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}"/>
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url}}/feed.xml">
-
+  {% if page.layout == 'post' %}
   <script type="application/ld+json">{% include metadata.json %}</script>
+  {% endif %}
   <script type="application/ld+json">{% include breadcrumb.json %}</script>
 
   <style amp-custom>
