--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,10 @@
 
 <!DOCTYPE html>
 <html ⚡ lang="en">
-  {% include head.html %}
+  {% include_cached head.html %}
   <body>
-    {% include analytics.html %}
-    {% include header.html %}
+    {% include_cached analytics.html %}
+    {% iinclude_cached header.html %}
 
     {{ content }}
 
