--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   {% include_cached head.html %}
   <body>
     {% include_cached analytics.html %}
-    {% iinclude_cached header.html %}
+    {% include_cached header.html %}
 
     {{ content }}
 
