update scrum url

--- a/_includes/cert.html
+++ b/_includes/cert.html
@@ -29,7 +29,7 @@
   {% endif %}
   {% if site.psm1 %}
   <li class="cert">
-    <a target="_blank" rel="noopener" title="Professional Scrum Master I (PSM I)" href="https://eu.badgr.com/public/assertions/external?url=https:%2F%2Fwww.scrum.org%2Fbadges%2Fawards%2F540447">
+    <a target="_blank" rel="noopener" title="Professional Scrum Master I (PSM I)" href="https://www.scrum.org/user/413881">
            <amp-img src="{{ site.url }}/{{ site.psm1 }}" width="32" height="58" layout="responsive" alt="Professional Scrum Master I (PSM I)"></amp-img>
     </a>
   </li>
