--- a/_includes/cert.html
+++ b/_includes/cert.html
@@ -2,7 +2,7 @@
   {% if site.clf-c01 %}
   <li class="cert">
     <a target="_blank" rel="noopener" title="Amazon AWS Certified Cloud Practitioner (CLF-C01)" href="https://www.youracclaim.com/earner/earned/badge/efdaa120-09b4-449a-b7de-4d1ec7838b02">
-       <amp-img src="{{ site.url }}/{{ site.clf-c01 }}" width="32" height="58" layout="responsive" alt="Amazon AWS Certified Cloud Practitioner (CLF-C01)"></amp-img>
+       <amp-img src="{{ site.url }}/{{ site.clf-c01 }}" width="58" height="58" layout="responsive" alt="Amazon AWS Certified Cloud Practitioner (CLF-C01)"></amp-img>
     </a>
   </li>
   {% endif %}
@@ -30,14 +30,14 @@
   {% if site.psm1 %}
   <li class="cert">
     <a target="_blank" rel="noopener" title="Professional Scrum Master I (PSM I)" href="https://www.scrum.org/user/413881">
-           <amp-img src="{{ site.url }}/{{ site.psm1 }}" width="32" height="58" layout="responsive" alt="Professional Scrum Master I (PSM I)"></amp-img>
+           <amp-img src="{{ site.url }}/{{ site.psm1 }}" width="34" height="58" layout="responsive" alt="Professional Scrum Master I (PSM I)"></amp-img>
     </a>
   </li>
   {% endif %}
   {% if site.cspo %}
   <li class="cert">
     <a target="_blank" rel="noopener" title="Certified Scrum Product Owner (CSPO)" href="https://www.scrumalliance.org/community/profile/rbogman">
-           <amp-img src="{{ site.url }}/{{ site.mcss }}" width="32" height="58" layout="responsive" alt="Certified Scrum Product Owner (CSPO)"></amp-img>
+           <amp-img src="{{ site.url }}/{{ site.cspo }}" width="67" height="58" layout="responsive" alt="Certified Scrum Product Owner (CSPO)"></amp-img>
     </a>
   </li>
   {% endif %}
