--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,9 @@
           <li class="ampstart-faq-item"><a href="{{ site.url }}{{ site.baseurl }}{{ entry.url }}" class="text-decoration-none">{{ entry.title }}</a></li>
       </li>
       {% endfor %}
+      <li class="ampstart-nav-item ampstart-nav-dropdown relative {{ current }}">
+      <li class="ampstart-faq-item"><a href="https://raybogman.comhttps://magecoach.raybogman.com/" class="text-decoration-none">Mage.Coach</a></li>
+      </li>
     </ul>
   </nav>
 
