--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
       </li>
       {% endfor %}
       <li class="ampstart-nav-item ampstart-nav-dropdown relative {{ current }}">
-      <li class="ampstart-faq-item"><a href="https://raybogman.comhttps://magecoach.raybogman.com/" class="text-decoration-none">Mage.Coach</a></li>
+      <li class="ampstart-faq-item"><a href="https://magecoach.raybogman.com/" class="text-decoration-none">Mage.Coach</a></li>
       </li>
     </ul>
   </nav>
